# Vemcon_Calculator_IOS_Style

./: CMakeLists.txt  CalculatorDelegate.qml  DisplayDelegate.qml  Main.qml  NumpadDelegate.qml  README.md  calculator.cpp  calculator.h  main.cpp
